kbase-extension/static/kbase/css/kbaseNarrative.css
/* ... */
.kb-function-body a:hover {
    text-decoration: none;
}

.kb-function-error {
    background-color: #f2dede !important;
    color: #b94a48;
    border-color: #eed3d7 !important;
}

/* Help on a function */
.kb-function-help {
    padding: 0 3px;
    float: right;
    cursor: pointer;
    color: #56559e;
    font-size: 14pt;
}

.kb-function-help:hover {
    color: black;
}

.kb-function-help-popup {
    position: absolute;
    top: 0px;
    left: 300px;
    z-index: 99;
    cursor: pointer;
    max-width: 300px;
}

.kb-function-help-popup h1 {
    margin: 0;
    margin-top: -10px;
    padding: 0;
    font-size: 110%;
    color: #3076A2;
}

.kb-function-help-popup h2 {
    margin: 10px 0 -10px 0;
    padding-top: 5px;
    font-size: 80%;
    color: #999;
    font-style: italic;
    text-align: right;
    font-weight: 100;
}

.kb-function-help-popup .header {
    background-color: #fff;
    color: #3076A2;
    font-weight: bold;
    font-size: 120%;
    margin: 0;
    padding: 0;
}

.kb-function-help-popup a {
    font-weight: bold;
    text-decoration: underline;
}

.kb-function-help-popup .version {
    font-size: 80%;
    color: #666;
}

.kb-function-help-popup .body {
    margin-top: 10px;
    margin-bottom: 10px;
}

#kb-function-help {
    position: absolute;
    top: 400px;
    left: 300px;
    z-index: 99;
    cursor: pointer;
    width: 250px;
}

#kb-function-help h1 {
    margin: 0;
    margin-top: -10px;
    padding: 0;
    font-size: 110%;
    color: #3076A2;
}

#kb-function-help h2 {
    margin: 10px 0 -10px 0;
    padding-top: 5px;
    font-size: 80%;
    color: #999;
    font-style: italic;
    text-align: right;
    font-weight: 100;
}

#kb-function-error-traceback {
    white-space : nowrap;
    float : left;
    max-width : 250px;
    overflow-x : scroll;
}

.kb-function-dim {
    background-color: #eee !important;
    /* border-color: #ddd !important; */
}

.kb-function-dim .panel-heading {
    background-color: #eee !important;
    /*border-color: #000 !important; */
}

.kb-function-cat-dim {
    background-color: #ddd !important;
    border-color: #ddd !important;
}

.kb-function-cat-dim .panel-heading {
    background-color: #ddd !important;
    border-color: #ddd !important;
}

.kb-function-toggle {
    color: #0088cc;
    font-style: italic;
    cursor: pointer;
}

.kb-cell-toolbar .buttons {
    font-weight: bold;
    color: #CECECE !important;
}

.kb-cell-toolbar .btn {
    border: none;
}

.kb-cell-toolbar .icon {
    display: inline-block;
    height: 56px;
    width: 56px;
    padding: 0;
    margin-right: 4px;
    vertical-align: top;
    border: 0px red solid;
    line-height: 56px;
    overflow: hidden;
}

.kb-cell-toolbar .title {
    font-weight: normal;
    font-size: 120%;
    font-family: "OxygenBold", Arial, sans-serif;
    color: #2e618d;
}

.kb-cell-toolbar .subtitle {
    font-family: "Roboto", Arial, sans-serif;
    font-size: 90%;
    color: #666;
}

.kb-cell-toolbar .info-link {
    font-family: "Roboto", Arial, sans-serif;
    font-size: 90%;
    color: #666;
}


.kb-toolbar-open {
    border-bottom: 1px solid #CCC;
    border-radius: 0;
}

.selected .kb-toolbar-open {
    border-left: 1px solid #4BB856;
    border-bottom: 1px solid #4BB856;
    background-color: #dff0d8;
}

.unselected .kb-toolbar-open {
    background-color: none;
}

.selected.kb-error .kb-toolbar-open {
    border-color: #D9534F;
    background-color: #F2DEDE;
}

/* ------------------------------------------------- */
/* IPython cells */

.kb-cell-run {
    z-index: auto;
    opacity: 1;
}
.kb-cell-run h1 {
    font-family: 'Roboto';
    font-weight: normal;
    font-size: 12pt;
    line-height: 15px;
    color: #2E618D;
    margin: 3px 13px 3px 3px;
    opacity: inherit;
    display: inline;
}
.kb-cell-run div.kb-func-desc {
    opacity: inherit;
    display: block;
}

.kb-cell-run h2 {
    font-family: 'Roboto';
    font-weight: normal;
    font-size: 11pt;
    line-height: 150%;
    color: #666666;
    margin: 3px;
    opacity: inherit;
}
.kb-cell-run form input[type="submit"] {
    float: right;
    opacity: inherit;
    margin-top: 5px;
}
.kb-cell-run form .buttons {
    float: right;
    margin-top: 5px;
}
.kb-cell-params table {
    border: none;
    margin-bottom: 10px;
    opacity: inherit;
    margin-left: auto;
    margin-right: auto;
}
.kb-cell-params table > tr,td {
    border: none;
    vertical-align: middle;
}

.kb-cell-params thead>tr>th,
.kb-cell-params tbody>tr>th,
.kb-cell-params tfoot>tr>th,
.kb-cell-params thead>tr>td,
.kb-cell-params tbody>tr>td,
.kb-cell-params tfoot>tr>td {
    padding: 2px 4px;
}

.kb-cell-params tr:hover td, .kb-cell-params tr:hover th {
    background:#eee;
}

/* grey out the form while running */
.kb-cell-run.running form {
    opacity: 0.6;
}
/* progress "meter" */
.kb-cell-progress {
    display: none;
}
.kb-cell-progress.running {
    display: block;
}

.kb-cell-progressbar {
    width: 400px;
    height: 20px;
}

.kb-out-desc {
    font-family: 'Roboto';
    font-weight: normal;
    font-size: 12pt;
    line-height: 15px;
    color: #2E618D;
    margin: 3px;
    opacity: inherit;
    display: inline;
}

.kb-err-desc {
    font-family: 'Roboto';
    font-weight: normal;
    font-size: 12pt;
    line-height: 15px;
    color: #A94442;
    margin: 3px;
    opacity: inherit;
    display: inline;
}

.kb-err-msg {
    font-size: 80% !important;
}

.kb-out-header {
    background-color: #ddd;
    padding: 10px;
}

.kb-func-timestamp {
    color: #555;
    font-size: 10pt;
    font-family: 'Roboto';
    margin-top: -3px;
    padding-right: 1em;
}

.unselected .kb-func-timestamp {
    color: silver;
}

.kb-func-panel {
  border-color: #bce8f1;
  border-radius: 1px;
}

.kb-func-panel > .panel-heading {
  color: #31708f;
  border-radius: 1px;
  background-color: #d9edf7;
  border-color: #bce8f1;
  padding: 5px 10px;
}



.kb-func-panel .panel-body {
    padding: 0px 10px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}
/* ... */

